--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Freecodecamp responsive web design course porject one - Tribute Page",
   "main": "index.html",
   "scripts": {
-    "build": "postcss src/css/tailwindcss.css --output src/css/style.css"
+    "build": "postcss src/css/tailwindcss.css --output src/css/style.css --watch"
   },
   "repository": {
     "type": "git",
@@ -21,10 +21,11 @@
   },
   "homepage": "https://github.com/amarjeetrao/Tribute-Page-FreeCodeCamp#readme",
   "devDependencies": {
-    "postcss":"^7.0.17",
-    "postcss-cli":"^6.1.3",
-    "cssnano": "^4.1.10",
-    "tailwindcss": "^1.0.5"
+    "postcss": "^7.0.17",
+    "postcss-cli": "^6.1.3",
+    "tailwindcss": "^1.0.5",
+     "cssnano": "^4.1.10",
+    "postcss-preset-env": "^6.7.0"
   },
   "dependencies": {}
 }
