--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   "devDependencies": {
     "postcss": "^7.0.17",
     "postcss-cli": "^6.1.3",
-    "tailwindcss": "^1.0.5",
-     "cssnano": "^4.1.10",
-    "postcss-preset-env": "^6.7.0"
+    "postcss-import": "^12.0.1",
+    "postcss-preset-env": "^6.7.0",
+    "tailwindcss": "^1.0.5"
   },
   "dependencies": {}
 }
