--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Freecodecamp responsive web design course porject one - Tribute Page",
   "main": "index.html",
   "scripts": {
-    "start":"python -m SimpleHTTPServer 8000",
-    "build": "postcss src/css/tailwindcss.css --output src/css/style.css",
-    "watch": "postcss src/css/tailwindcss.css --output src/css/style.css --watch"
+    "start": "python -m SimpleHTTPServer 8000",
+    "build": "cross-env NODE_ENV=development postcss src/css/tailwindcss.css --output src/css/style.css",
+    "watch": "cross-env NODE_ENV=development postcss src/css/tailwindcss.css --output src/css/style.css --watch",
+    "production": "cross-env NODE_ENV=production postcss src/css/tailwindcss.css --output src/css/style.css"
   },
   "repository": {
     "type": "git",
@@ -23,11 +24,14 @@
   },
   "homepage": "https://github.com/amarjeetrao/Tribute-Page-FreeCodeCamp#readme",
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^1.2.0",
+    "cross-env": "^5.2.0",
     "postcss": "^7.0.17",
     "postcss-cli": "^6.1.3",
     "postcss-import": "^12.0.1",
-    "postcss-preset-env": "^6.7.0",
-    "tailwindcss": "^1.0.5"
+    "postcss-preset-env": "^6.7.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "tailwindcss": "^1.0.5"
+  }
 }
